# faster-beamer

./: .gitmodules  .travis.yaml  .travis.yml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
src/: beamer.rs  error.tex  latexcompile.rs  main.rs  parsing.rs  process_file.rs  tree_traversal.rs
