[package]
name = "faster-beamer"
version = "0.1.7"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]
edition = "2018"
description = "An incremental compiler for LaTeX Beamer slides"
license="GPL-3.0-or-later"
repository = "https://github.com/theHamsta/faster-beamer"
keywords = ["latex"]
homepage = "https://github.com/theHamsta/faster-beamer"
categories = ["Latex"]
readme = "README.md"

[dependencies]
tree-sitter = "0.6.3"
dirs = "2.0.2"
lazy_static = "1.4.0"
clap = "2.33.0"
hotwatch = "0.4.3"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_info"] }
pretty_env_logger = "0.4.0"
cachedir = "0.1.1"
md5 = "0.7.0"
rayon = "1.3.0"
regex = "1.3.6"
symlink = "0.1.0"
indicatif = "0.14.0"
failure_derive = "0.1.7"
failure = "0.1.7"
tempfile = "3.1.0"

[build-dependencies]
cc = { version = "1.0.50", features = ["parallel"] }
