[package]
name = "faster-beamer"
version = "0.1.7"
authors = ["Stephan Seitz <stephan.seitz@fau.de>"]
edition = "2018"
description = "An incremental compiler for LaTeX Beamer slides"
license="GPL-3.0-or-later"
repository = "https://github.com/theHamsta/faster-beamer"
keywords = ["latex"]
homepage = "https://github.com/theHamsta/faster-beamer"
categories = ["Latex"]
readme = "README.md"

[dependencies]
tree-sitter = "0.17.0"
dirs = "3.0.1"
lazy_static = "1.4.0"
clap = "2.33.3"
hotwatch = "0.4.3"
log = { version = "0.4.11", features = ["max_level_trace", "release_max_level_info"] }
pretty_env_logger = "0.4.0"
md5 = "0.7.0"
rayon = "1.4.1"
regex = "1.4.1"
symlink = "0.1.0"
indicatif = "0.15.0"
failure_derive = "0.1.8"
failure = "0.1.8"
tempfile = "3.1.0"

[build-dependencies]
cc = { version = "1.0.61", features = ["parallel"] }
